--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "vue",
+  "name": "print-quote-system",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.9",
-    "vue": "^3.4.29",
-    "vue-router": "^4.5.0"
+    "element-plus": "^2.9.3",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vue-i18n": "^11.0.1"
   },
   "devDependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
     "@tsconfig/node18": "^18.2.4",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.7",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "element-plus": "^2.9.3",
-    "pinia": "^2.3.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vitest/eslint-plugin": "1.1.20",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "jsdom": "^25.0.1",
+    "npm-run-all2": "^7.0.2",
     "typescript": "^5.7.3",
-    "vite": "^5.3.1",
-    "vue-i18n": "^11.0.1",
+    "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.6.8",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.2.0"
   }
 }
